--- a/style.css
+++ b/style.css
@@ -3,20 +3,39 @@ body {
   min-height: 100vh;
 }
 
+p {
+  margin: 0px;
+}
+
 #calculator-container {
   font-family: monospace;
   display: flex;
   justify-content: center;
-  margin-top: 50px;
 }
 
 #calculator {
   width: 600px;
-  height: 800px;
+  height: 750px;
   border: 1px solid black;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  margin-top: 50px;
+}
+
+#display-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+
+.empty-div {
+  width: 30px;
+}
+
+#change-output-format-button {
+  margin-bottom: 50px;
+  font-size: 20px;
 }
 
 #display {
@@ -37,8 +56,48 @@ body {
   font-size: 30px;
 }
 
+input:focus-visible {
+  outline: none;
+}
+
 #display-output {
   flex: 1 1 120px;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 10px;
+  color: blue;
+}
+
+#calculator-buttons-container {
+  width: 500px;
+  margin: 0 auto;
+  margin-top: 20px;
+  row-gap: 10px;
+}
+
+#toolbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+#storage-panel, #right-toolbar-panel {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 160px;
+  flex: 1 1 0;
+  gap: 10px;
+}
+
+.small-button {
+  flex: 1 1 60px;
+  height: 45px;
+  font-size: 20px;
 }
 
 .storage-active {
@@ -53,4 +112,61 @@ body {
 
 .storage-disabled, .change-format-disabled {
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+#backpace-button {
+  flex: 2 1 120px;
+  height: 45px;
+  font-size: 20px;
+}
+
+#navigation-buttons {
+  display: flex;
+  flex: 1 1 0;
+  height: 100px;
+  width: 160px;
+}
+
+#navigation-buttons-middle {
+  display: flex;
+  flex-direction: column;
+  flex: 2 1 0;
+}
+
+#go-left-button, #go-right-button, #go-up-button, #go-down-button {
+  flex: 1 1 0;
+  font-size: 25px;
+}
+
+.rotate {
+  transform: rotate(90deg);
+}
+
+#input-buttons-container {
+  display: flex;
+  justify-content: center;
+  column-gap: 20px;
+  margin-top: 10px;
+}
+
+#input-buttons-left {
+  flex: 3 1 0;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+#input-buttons-right {
+  flex: 2 1 0;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+.input-button, #evaluate-button {
+  flex: 1 1 80px;
+  height: 80px;
+  font-size: 25px;
 }
